--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "App\\Traits\\": "app/Traits/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
+            
         }
     },
     "autoload-dev": {
